@@ -1,0 +1,64 @@
+// +build !integration
+
+package prospector
+
+import (
+	"os"
+	"testing"
+	"time"
+
+	"github.com/elastic/beats/filebeat/input/file"
+	"github.com/stretchr/testify/assert"
+)
+
+var cleanInactiveTests = []struct {
+	cleanInactive time.Duration
+	fileTime      time.Time
+	result        bool
+}{
+	{
+		cleanInactive: 0,
+		fileTime:      time.Now(),
+		result:        false,
+	},
+	{
+		cleanInactive: 1 * time.Second,
+		fileTime:      time.Now().Add(-5 * time.Second),
+		result:        true,
+	},
+	{
+		cleanInactive: 10 * time.Second,
+		fileTime:      time.Now().Add(-5 * time.Second),
+		result:        false,
+	},
+}
+
+func TestIsCleanInactive(t *testing.T) {
+
+	for _, test := range cleanInactiveTests {
+
+		prospector := ProspectorLog{
+			config: prospectorConfig{
+				CleanInactive: test.cleanInactive,
+			},
+		}
+		state := file.State{
+			Fileinfo: TestFileInfo{
+				time: test.fileTime,
+			},
+		}
+
+		assert.Equal(t, test.result, prospector.isCleanInactive(state))
+	}
+}
+
+type TestFileInfo struct {
+	time time.Time
+}
+
+func (t TestFileInfo) Name() string       { return "" }
+func (t TestFileInfo) Size() int64        { return 0 }
+func (t TestFileInfo) Mode() os.FileMode  { return 0 }
+func (t TestFileInfo) ModTime() time.Time { return t.time }
+func (t TestFileInfo) IsDir() bool        { return false }
+func (t TestFileInfo) Sys() interface{}   { return nil }
