@@ -72,6 +72,7 @@ https://github.com/elastic/beats/compare/v5.0.0...master[Check the HEAD diff]
 - Add command line option -once to run filebeat only once and then close. {pull}2456[2456]
 - Only load matching states into prospector to improve state handling {pull}2840[2840]
 - Reset all states ttl on startup to make sure it is overwritten by new config {pull}2840[2840]
+- Persist all states for files which fall under ignore_older to have consistent behaviour {pull}2859[2859]
 
 *Winlogbeat*
 
